Fixed some stuff + added icon

--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE HTML>
 <html>
-
     <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131237362-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-131237362-1');
-        </script>
-
-        <title>Random Colours</title>
+        <title>Colours Generator</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
 
-        <link rel="shortcut icon" href="https://drbracewell.co.uk/icons/colours.ico" type="image/x-icon" /> 
+        <link rel="shortcut icon" href="colours.ico" type="image/x-icon" /> 
         <link rel="stylesheet" href="colours.css"/> 
         
         <script src="colours.js"></script>
