--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <body>
         <div class="wrapper">
-            <div class="box root"><div class="hexCode" id="rootColour"></div><a href="https://drbracewell.co.uk" class="home">Head Home?</a></div>
+            <div class="box root"><div class="hexCode" id="rootColour"></div><a href="https://drbracewell.dev" class="home">Head Home?</a></div>
             <div class="box tenLight"><div class="hexCode" id="lightColour"></div></div>
             <div class="box tenDark"><div class="hexCode" id="darkColour"></div></div>
             <div class="box comp"><div class="hexCode" id="compColour"></div></div>
