--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
 
         <link rel="shortcut icon" href="colours.ico" type="image/x-icon" /> 
         <link rel="stylesheet" href="colours.css"/> 
         
-        <script src="colours.js"></script>
+        <script type="module" src="colours.js"></script>
     </head>
     
     <body>
         <div class="wrapper">
-            <div class="box root"><div class="hexCode" id="rootColour"></div><a href="https://drbracewell.dev" class="home">Head Home?</a></div>
             <div class="box tenLight"><div class="hexCode" id="lightColour"></div></div>
             <div class="box tenDark"><div class="hexCode" id="darkColour"></div></div>
             <div class="box comp"><div class="hexCode" id="compColour"></div></div>
-            <div class="generateColours">
-                <button class="btn" onclick="generateColours()">Get New Colours</button>
+            <div class="btn-wrap">
+                <button class="btn" id="generate">Get New Colours</button>
             </div>
         </div>
     </body>
