--- a/index.html
+++ b/index.html
@@ -1,30 +1,46 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <title>Colours Generator</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Colours Generator</title>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏳️‍🌈</text></svg>"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Easily spin up some good-looking colour palettes for your design project!"
+    />
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-        <link rel="shortcut icon" href="colours.ico" type="image/x-icon" /> 
-        <link rel="stylesheet" href="colours.css"/> 
-        
-        <script type="module" src="colours.js"></script>
-    </head>
-    
-    <body>
-        <div class="wrapper">
-            <div class="box tenLight"><div class="hexCode" id="lightColour"></div></div>
-            <div class="box tenDark"><div class="hexCode" id="darkColour"></div></div>
-            <div class="box comp"><div class="hexCode" id="compColour"></div></div>
-            <div class="btn-wrap">
-                <button class="btn" id="generate">Get New Colours</button>
-            </div>
-        </div>
-    </body>
+  <body>
+    <div class="wrapper">
+      <div class="box" id="rootBackground">
+        <p class="hexCode" id="rootText"></p>
+      </div>
+      <div class="box" id="lighterBackground">
+        <p class="hexCode" id="lighterText"></p>
+      </div>
+      <div class="box" id="darkerBackground">
+        <p class="hexCode" id="darkerText"></p>
+      </div>
+      <div class="box" id="complementBackground">
+        <p class="hexCode" id="complementText"></p>
+      </div>
 
+      <div class="btn-wrap">
+        <button class="btn" id="generate">Get New Colours</button>
+      </div>
+    </div>
+
+    <script type="module" defer src="/main.js"></script>
+  </body>
 </html>
