--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/colours-generator/assets/index.effa0a73.js"></script>
-    <link rel="modulepreload" href="/colours-generator/assets/vendor.eaf70a6f.js">
-    <link rel="stylesheet" href="/colours-generator/assets/index.90afd483.css">
+    <script type="module" crossorigin src="/assets/index.b3f18d00.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.eaf70a6f.js">
+    <link rel="stylesheet" href="/assets/index.90afd483.css">
   </head>
 
   <body>
