--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="btn-wrap">
-        <button class="btn" id="generate">Get New Colours</button>
+        <button class="btn" id="generate">Create Colours</button>
       </div>
     </div>
 
