--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap"
       rel="stylesheet"
     />
+
+    <script type="module" src="./src/index.js"></script>
   </head>
 
   <body>
@@ -36,7 +38,5 @@
         <button class="btn" id="generate">Create Colours</button>
       </div>
     </div>
-
-    <script type="module" defer src="/main.js"></script>
   </body>
 </html>
