--- a/index.html
+++ b/index.html
@@ -1,45 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Colours Generator</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Easily spin up some good-looking colour palettes for your design project!"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap"
-      rel="stylesheet"
-    />
-
-    
-    <script type="module" crossorigin src="./assets/index.88c75867.js"></script>
-    <link rel="modulepreload" href="./assets/vendor.8a64bb96.js">
-    <link rel="stylesheet" href="./assets/index.90afd483.css">
-  </head>
-
-  <body>
-    <div class="wrapper">
-      <div class="box" id="rootBackground">
-        <p class="hexCode" id="rootText"></p>
-      </div>
-      <div class="box" id="lighterBackground">
-        <p class="hexCode" id="lighterText"></p>
-      </div>
-      <div class="box" id="darkerBackground">
-        <p class="hexCode" id="darkerText"></p>
-      </div>
-      <div class="box" id="complementBackground">
-        <p class="hexCode" id="complementText"></p>
-      </div>
-
-      <div class="btn-wrap">
-        <button class="btn" id="generate">Create Colours</button>
-      </div>
-    </div>
+<html>
+  <body style="height:100vh;width:100vw;">
   </body>
-</html>
+  <script type="module">
+    setInterval(() => {    var x = Math.floor(Math.random() * 256);
+    var y = Math.floor(Math.random() * 256);
+    var z = Math.floor(Math.random() * 256);
+    var bgColor = "rgb(" + x + "," + y + "," + z + ")";
+ console.log(bgColor);
+  
+    document.body.style.background = bgColor;}, 1);
+  </script>
+</html
